Change data response from api & adjust API endpoint